@@ -15,7 +15,7 @@ Quickstart
     with lib.scope(prefix='mylib_'):
 
         # Describe function available in the library.
-        @lib.function()
+        @lib.function
         def some_func(title: str, year: int) -> str:
             ...
 
@@ -23,13 +23,13 @@ Quickstart
 
             class Thing(CInt):
 
-                @lib.method()
+                @lib.method(int_sign=True)  # Override `int_sign` from scope.
                 def one(self, some: int) -> int:
                     # Implicitly pass Thing instance alongside
                     # with explicitly passed `some` arg.
                     ...
 
-                @lib.method()
+                @lib.method
                 def two(self, some:int, cfunc: Callable) -> int:
                     # `cfunc` is a wrapper, calling an actual ctypes function.
                     # If no arguments provided the wrapper will try detect them
@@ -37,7 +37,7 @@ Quickstart
                     result = cfunc()
                     return result + 1
 
-        @lib.function()
+        @lib.function
         def get_thing() -> Thing:
             ...
 
@@ -46,7 +46,7 @@ Quickstart
     class Wide:
 
         @staticmethod
-        @lib.function()
+        @lib.function
         def get_utf(some: str) -> str:
             ...
 
